--- a/conf/app.json.example
+++ b/conf/app.json.example
@@ -8,7 +8,7 @@
   },
   "redis": {
     "open": true,
-    "addr": "redisserv:6379",
+    "addr": "redis-serv:6379",
     "db": 0,
     "pwd": "",
     "pool_size": 30,
@@ -17,7 +17,7 @@
     "key_prefix": "export-server"
   },
   "mysql":{
-    "dsn": "root:root@tcp(mysqlserv:3306)/export?charset=utf8&parseTime=True&loc=Local",
+    "dsn": "root:123123@tcp(mysql-serv:3306)/export?charset=utf8&parseTime=True&loc=Local",
     "debug": true,
     "maxIdleConns": 10,
     "maxOpenConns": 100,
@@ -36,10 +36,11 @@
     "httpWorker" : 1,
     "rowWorker" : 1
   },
-  "tmp_storage": {
+  "storage": {
     "outexcel_tmp": "/tmp/outexcel",
     "source_raw" : "/tmp/params"
   },
+  "excel_maxlines": 5000,
   "exp_storage": {
     "channel": "local",
     "local" : {
@@ -47,15 +48,14 @@
       "down_url": "http://127.0.0.1:8080"
     },
     "alioss": {
-      "bucket": "*",
-      "endpoint_up": "com",
-      "key": "",
-      "secret": "",
-      "down_url": "https://heykui.oss-cn-beijing.aliyuncs.com"
+      "bucket": "heykui",
+      "endpoint_up": "oss-cn-beijing.aliyuncs.com",
+      "key": "*****",
+      "secret": "*****",
+      "endpoint_down": "https://heykui.oss-cn-beijing.aliyuncs.com"
     },
     "ftp": {
 
     }
-  },
-  "excel_maxlines": 5000
+  }
 }
